add sweet alert